# K4W2

./: CMakeLists.txt  README.md  cache.txt
cmake/: FindEigen.cmake~  FindEigen3.cmake~
src/: CMakeLists.txt  CMakeLists.txt~  K4W2Config.cmake.in
src/Components/: CMakeLists.txt  CMakeLists.txt~
src/Components/Kinect2Bridge/: CMakeLists.txt  Kinect2Bridge.cpp  Kinect2Bridge.hpp
src/Components/Kinect2Cloud/: CMakeLists.txt  Kinect2Cloud.cpp  Kinect2Cloud.hpp
src/Components/Kinect2Device/: CMakeLists.txt  Kinect2Device.cpp  Kinect2Device.hpp
src/Types/: CMakeLists.txt
tasks/: Kinect2Cloud.xml  Kinect2Test.xml  Nowy.xml  Test.xml  Test2.xml
